--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
           <div class="hero-background animate__animated animate__fadeInLeft animate__slow">
             <div class="hero-btn animate__animated animate__fadeInUp animate__slow">
               <a href="#" class="btn btn-primary">
-                <img width="15" src="../img/icons/calendar-2-512.png" alt="ticket" class="btn-icon">
+                <img width="15" src="img/icons/calendar-2-512.png" alt="ticket" class="btn-icon">
                 <span class="btn-text">Записаться</span>
               </a>
 
               <a href="#" class="btn btn-primary">
-                <img width="15" src="../img/icons/phone-512.png" alt="btn-icon" class="btn-icon">
+                <img width="15" src="img/icons/phone-512.png" alt="btn-icon" class="btn-icon">
                 <span class="btn-text">Заказать обратный звонок</span>
               </a>
             </div>
@@ -86,7 +86,7 @@
           <!-- 1я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h2 class="card-title">Замена/Установка линз</h2>
 
             </div>
@@ -98,7 +98,7 @@
           <!-- 2я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h2 class="card-title">Тюнинг фар</h2>
             </div>
             <div class="card-back">
@@ -109,7 +109,7 @@
           <!-- 3я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h2 class="card-title">Покраска фар</h2>
             </div>
             <div class="card-back">
@@ -120,7 +120,7 @@
           <!-- 4я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h2 class="card-title">Полировка фар</h2>
             </div>
             <div class="card-back">
@@ -131,7 +131,7 @@
           <!-- 5я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h2 class="card-title">Регулировка фар на стенде</h2>
             </div>
             <div class="card-back">
@@ -142,7 +142,7 @@
           <!-- 6я карточка -->
           <div class="service-card">
             <div class="card-front">
-              <img class="card-logo" src="../img/cards/regylirovka.jpg" alt="reg.jpg">
+              <img class="card-logo" src="img/cards/regylirovka.jpg" alt="reg.jpg">
               <h3 class="card-title">Бронирование фар</h3>
             </div>
             <div class="card-back">
@@ -352,12 +352,12 @@
 
             <div class="connect">
               <div class="social-links">
-                <a href="#" class="social-link"><img src="../img/social/telegram-2-24.png" alt="Telegram.png"></a>
-                <a href="#" class="social-link"><img src="../img/social/vk-24.png" alt="VK.png"></a>
+                <a href="#" class="social-link"><img src="img/social/telegram-2-24.png" alt="Telegram.png"></a>
+                <a href="#" class="social-link"><img src="img/social/vk-24.png" alt="VK.png"></a>
               </div>
 
               <a href="tel:+79660200818" class="header-phone_number">
-                <img class="header-phone_logo" src="../img/phone.png" alt="">
+                <img class="header-phone_logo" src="img/phone.png" alt="">
                 <span class="phone">8-800-100-00-00</span>
               </a>
             </div>
