--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=D, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сеть студий автосвета Prosvet</title>
   <!-- CSS -->
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -73,7 +73,7 @@
               <span class="btn-text">Заказать обратный звонок</span>
             </a>
           </div>
-        </div>
+        </div><!-- ./hero-content -->
       </header>
 
       <section class="services section" id="services">
@@ -375,17 +375,21 @@
               src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac15fd6648e72f3ad5d8eaa2462b17b894ea35efc732e4d206f026c1e9bd3b85e&amp;&amp;&amp;lang=ru_RU&amp;scroll=true">
               </script>
           </div>
-        </div>
 
+        </div>
         <div class="form">
-          <form action="#" class="contacts-form">
+          <form class="contacts-form" action="/php/telegram_call.php" method="POST">
             <h4 class="form-title">Можете оставить заявку, мы перезвоним вам сегодня</h4>
-            <input type="text" class="input input-name" placeholder="Ваше имя" required>
-            <input type="text" class="input input-phone" placeholder="Ваш телефон" required>
+            <input class="input input-name" type="text" name="user_name-call" pattern="^[А-Яа-яЁё\s]+$"
+              placeholder="Ваше имя" required>
+            <input class="input input-phone" type="tel" minlength="11" maxlength="12"
+              pattern="[\+]*[7-8]{1}\s?[\(]*9[0-9]{2}[\)]*\s?\d{3}[-]*\d{2}[-]*\d{2}" name="user_phone-call"
+              placeholder="Ваш телефон" required>
             <input type="submit" class="button form-button">
             <a href="#" class="contacts-policy">Политика конфиденциальности</a>
           </form>
         </div>
+
 
       </section>
 
@@ -393,7 +397,6 @@
   </main>
 
   <div class="modal">
-
     <div class="modal__block">
       <button class="modal__close">✘</button>
       <form class="modal__form" action="/php/telegram.php" method="POST">
@@ -410,14 +413,12 @@
         <!--  <a href="#" class="contacts-policy">Политика конфиденциальности</a> -->
       </form>
     </div>
-
   </div>
-
 
   <div class="modal-call">
     <div class="modal__block">
       <button class="modal__close">✘</button>
-      <form action="/php/telegram_call.php" class="modal__form" method="POST">
+      <form class="modal__form" action="/php/telegram_call.php" method="POST">
         <h4 class="form-title modal__subtitle">Можете оставить заявку, мы перезвоним Вам сегодня!</h4>
         <input class="input input-name" type="text" name="user_name-call" pattern="^[А-Яа-яЁё\s]+$"
           placeholder="Ваше имя" required>
